<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.mzattera</groupId>
	<artifactId>predictive-powers</artifactId>
	<version>0.5.0</version>
	<name>PredictivePowers</name>
	<description>A Java library to (easily) create GenAI-powered autonomous
		agents</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- Java version -->
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>

		<!-- Library versions -->
		<jackson.version>2.15.3</jackson.version>
		<jackson.jsonschema.version>1.0.39</jackson.jsonschema.version>
		<lombok.version>1.18.26</lombok.version>
		<retrofit.version>2.9.0</retrofit.version>
		<tika.version>2.9.0</tika.version>
		<djl.tokenizers.version>0.26.0</djl.tokenizers.version>
		<jtokkit.version>0.6.1</jtokkit.version>
	</properties>
	<dependencies>

		<!-- Jackson (JSON annotations and bindings) -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<!-- JSON schema -->
		<dependency>
			<groupId>com.kjetland</groupId>
			<artifactId>mbknor-jackson-jsonschema_2.13</artifactId>
			<version>${jackson.jsonschema.version}</version>
		</dependency>

		<!-- lombok (POJO annotations) -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- Retrofit (create Java HTTP client from REST APIs) -->
		<dependency>
			<groupId>com.squareup.retrofit2</groupId>
			<artifactId>retrofit</artifactId>
			<version>${retrofit.version}</version>
		</dependency>
		<dependency>
			<groupId>com.squareup.retrofit2</groupId>
			<artifactId>adapter-rxjava2</artifactId>
			<version>${retrofit.version}</version>
		</dependency>
		<dependency>
			<groupId>com.squareup.retrofit2</groupId>
			<artifactId>converter-jackson</artifactId>
			<version>${retrofit.version}</version>
		</dependency>

		<!-- Tika is a library to recognize and extract text from a variety of
		file types -->
		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-core</artifactId>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
			<version>${tika.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-parsers-standard-package</artifactId>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
			<version>${tika.version}</version>
		</dependency>
		<!--
		  <dependency>
		    <groupId>org.apache.tika</groupId>
		<artifactId>tika-parser-sqlite3-package</artifactId>
		<version>2.7.0</version>
		  </dependency>
		  <dependency>
		<groupId>org.apache.tika</groupId>
		<artifactId>tika-parser-scientific-package</artifactId>
		<version>2.7.0</version>
		  </dependency>	
  		-->

		<!-- This allows to dynamically load Hugging Face tokenizers using DJL
		tokenizer library -->
		<dependency>
			<groupId>ai.djl.huggingface</groupId>
			<artifactId>tokenizers</artifactId>
			<version>${djl.tokenizers.version}</version>
		</dependency>

		<!-- Tokens count for OpenAI models -->
		<dependency>
			<groupId>com.knuddels</groupId>
			<artifactId>jtokkit</artifactId>
			<version>${jtokkit.version}</version>
		</dependency>

		<!--
		Below dependencies are needed to disable annoying SLF4J log
		messages FFS!
		Notice also a logback.xml file must be in the project
		resources to disable all logging.
		-->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.7</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.3.6</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.20.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<!-- This Maven plugin creates a single JAR with all
				dependencies, when "package" runs -->
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id> <!-- this is used for inheritance
						merges -->
						<phase>package</phase> <!-- bind to the packaging phase -->
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>